@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.86 2020/04/01 20:30:53 schwarz Exp $
+# $NetBSD: Makefile,v 1.87 2020/04/12 14:41:14 schwarz Exp $
 
-DISTNAME=	nano-4.9
+DISTNAME=	nano-4.9.2
 CATEGORIES=	editors
-MASTER_SITES=	https://www.nano-editor.org/dist/v${PKGVERSION_NOREV:R}/
+MASTER_SITES=	https://www.nano-editor.org/dist/v${PKGVERSION_NOREV:C/\..*$//}/
 EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	wiedi@frubar.net
