@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2020,v 1.2239 2020/04/12 11:49:59 adam Exp $
+$NetBSD: CHANGES-2020,v 1.2240 2020/04/12 14:41:14 schwarz Exp $
 
 Changes to the packages collection and infrastructure in 2020:
 
@@ -3085,3 +3085,4 @@ Changes to the packages collection and infrastructure in 2020:
 	Updated devel/rgbds to 0.4.0 [nia 2020-04-12]
 	Updated net/py-subunit to 1.4.0 [adam 2020-04-12]
 	Updated devel/py-test-assume to 2.2.1 [adam 2020-04-12]
+	Updated editors/nano to 4.9.2 [schwarz 2020-04-12]
